增加offer查询