@@ -1,7 +1,6 @@
 package com.example.mcp.client;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
@@ -9,19 +8,18 @@ import org.springframework.stereotype.Component;
 import java.io.IOException;
 import java.net.ConnectException;
 import java.net.URI;
+import java.net.URLEncoder;
 import java.net.UnknownHostException;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
-import java.time.LocalDateTime;
 import java.util.LinkedHashMap;
-import java.util.List;
 import java.util.Map;
 
 @Component
-public class CrmReportApiClient {
+public class IcOfferApiClient {
 
     private final HttpClient httpClient;
     private final ObjectMapper objectMapper;
@@ -29,10 +27,10 @@ public class CrmReportApiClient {
     private final String authHeaderName;
     private final String authPrefix;
 
-    public CrmReportApiClient(ObjectMapper objectMapper,
-                              @Value("${crm.api.base-url:http://192.168.1.250:9999/uac}") String crmBaseUrl,
-                              @Value("${crm.api.auth-header-name:authorization}") String authHeaderName,
-                              @Value("${crm.api.auth-prefix:Bearer }") String authPrefix) {
+    public IcOfferApiClient(ObjectMapper objectMapper,
+                            @Value("${crm.api.base-url:http://192.168.1.250:9999/uac}") String crmBaseUrl,
+                            @Value("${crm.api.auth-header-name:authorization}") String authHeaderName,
+                            @Value("${crm.api.auth-prefix:Bearer }") String authPrefix) {
         this.objectMapper = objectMapper;
         this.crmBaseUrl = crmBaseUrl;
         this.authHeaderName = authHeaderName;
@@ -42,50 +40,41 @@ public class CrmReportApiClient {
                 .build();
     }
 
-    public Map<String, Object> post(String toolName, String path, Map<String, Object> body, String accessToken) {
-        return exchange(toolName, "POST", path, body, accessToken);
-    }
-
-    public Map<String, Object> get(String toolName, String path, String accessToken) {
-        return exchange(toolName, "GET", path, null, accessToken);
-    }
-
-    private Map<String, Object> exchange(String toolName, String method, String path, Map<String, Object> body, String accessToken) {
+    public Map<String, Object> queryIcOfferList(String partNo, int current, String accessToken) {
         Map<String, Object> result = new LinkedHashMap<>();
-        result.put("tool", toolName);
-        result.put("timestamp", LocalDateTime.now().toString());
         result.put("crmBaseUrl", crmBaseUrl);
-        result.put("path", path);
-        result.put("method", method);
         result.put("authHeaderName", authHeaderName);
-
-        if (accessToken == null || accessToken.isBlank()) {
-            result.put("success", false);
-            result.put("message", "accessToken is required");
-            result.put("data", List.of());
-            return result;
-        }
+        result.put("authPrefix", authPrefix);
+        result.put("tokenProvided", accessToken != null && !accessToken.trim().isEmpty());
+        result.put("tokenLength", accessToken == null ? 0 : accessToken.trim().length());
 
         try {
-            String url = crmBaseUrl + path;
-            result.put("requestUrl", url);
-
-            HttpRequest.Builder builder = HttpRequest.newBuilder()
-                    .uri(URI.create(url))
-                    .timeout(Duration.ofSeconds(20))
-                    .header("Accept", "application/json")
-                    .header(authHeaderName, authPrefix + accessToken.trim());
-
-            if ("POST".equalsIgnoreCase(method)) {
-                String jsonBody = body == null ? "{}" : objectMapper.writeValueAsString(body);
-                result.put("requestBody", body == null ? Map.of() : body);
-                builder.header("Content-Type", "application/json")
-                        .POST(HttpRequest.BodyPublishers.ofString(jsonBody, StandardCharsets.UTF_8));
-            } else {
-                builder.GET();
+            if (accessToken == null || accessToken.trim().isEmpty()) {
+                result.put("success", false);
+                result.put("message", "CRM accessToken is required");
+                return result;
             }
 
-            HttpResponse<byte[]> response = httpClient.send(builder.build(), HttpResponse.BodyHandlers.ofByteArray());
+            if (partNo == null || partNo.trim().isEmpty()) {
+                result.put("success", false);
+                result.put("message", "partNo is required");
+                return result;
+            }
+
+            String safeToken = accessToken.trim();
+            String encodedPartNo = URLEncoder.encode(partNo.trim(), StandardCharsets.UTF_8);
+            String url = crmBaseUrl + "/customer/ic/offer/list?partNo=" + encodedPartNo + "&current=" + current;
+            result.put("requestUrl", url);
+
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(url))
+                    .GET()
+                    .timeout(Duration.ofSeconds(10))
+                    .header("Accept", "application/json")
+                    .header(authHeaderName, authPrefix + safeToken)
+                    .build();
+
+            HttpResponse<byte[]> response = httpClient.send(request, HttpResponse.BodyHandlers.ofByteArray());
             result.put("httpStatus", response.statusCode());
             result.put("responseHeaders", response.headers().map());
 
@@ -100,12 +89,11 @@ public class CrmReportApiClient {
                 return result;
             }
 
-            Map<String, Object> parsed = parseJsonObject(responseText);
+            JsonNode root = objectMapper.readTree(responseText);
             result.put("success", true);
-            result.put("response", parsed);
-            result.put("code", parsed.get("code"));
-            result.put("msg", parsed.get("msg"));
-            result.put("data", parsed.get("data"));
+            result.put("code", root.path("code").asInt());
+            result.put("msg", root.path("msg").asText());
+            result.put("data", objectMapper.convertValue(root.path("data"), Object.class));
             result.put("rawBody", responseText);
             return result;
         } catch (InterruptedException e) {
@@ -124,11 +112,6 @@ public class CrmReportApiClient {
             result.put("message", "CRM API unknown host: " + safeMessage(e));
             result.put("exceptionType", e.getClass().getName());
             return result;
-        } catch (JsonProcessingException e) {
-            result.put("success", false);
-            result.put("message", "Failed to serialize request body: " + safeMessage(e));
-            result.put("exceptionType", e.getClass().getName());
-            return result;
         } catch (IOException e) {
             result.put("success", false);
             result.put("message", "CRM API IO exception: " + safeMessage(e));
@@ -144,13 +127,6 @@ public class CrmReportApiClient {
             }
             return result;
         }
-    }
-
-    private Map<String, Object> parseJsonObject(String body) throws JsonProcessingException {
-        if (body == null || body.isBlank()) {
-            return Map.of();
-        }
-        return objectMapper.readValue(body, new TypeReference<>() {});
     }
 
     private String safeMessage(Throwable throwable) {
